# glgame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  console_commands.cpp  console_commands.h  game_console.cpp  game_console.h  history.txt  resources.qrc  vcpkg.json  vertexShader.glsl  widget.cpp  widget.h
.github/workflows/: windows_build.yml
headers/: actions.h  actor.h  constants.h
headers/camera/: camerabase.h  fpscamera.h
src/: actor.cpp  actor.h  application.cpp  application.h  camerabase.cpp  camerabase.h  close_handler.cpp  close_handler.h  console_commands.cpp  console_commands.h  custom_events.h  editor.qrc  editor.ui  engine.cpp  engine.h  fpscamera.h  fragmentShader.glsl  game.cpp  game.h  game_console.cpp  game_console.h  gameobject.cpp  gameobject.h  geom.h  hud.cpp  hud.h  main.cpp  resources.qrc  widget.cpp  widget.h
src/audio/: audio_context.cpp  audio_context.h  audio_loader.cpp  audio_loader.h  audio_sound.cpp  audio_sound.h
src/camera/: camerabase.cpp  fpscamera.cpp
src/core/: audio_sound.h  engine.cpp  engine.h  level_loader.cpp  level_loader.h  level_parser.cpp  level_parser.h
src/data/: room.json
src/dynamics/: character_controller.cpp  character_controller.h  physics_world.cpp  physics_world.h  rigidbody.cpp  rigidbody.h
src/dynamics/collision/: collision_base.cpp  collision_base.h  collision_box.cpp  collision_box.h  collision_capsule.cpp  collision_capsule.h  collision_defs.cpp  collision_defs.h  collision_factory.cpp  collision_factory.h
src/editor/: general_options_widget.cpp  general_options_widget.h  general_options_widget.ui  inspector_widget.cpp  inspector_widget.h  options_window.cpp  options_window.h  options_window.ui
src/editor/widgets/: vector3d_editor_widget.cpp  vector3d_editor_widget.h
src/game/: actions.h  actor.cpp  actor.h  collision_object.cpp  collision_object.h  cube.cpp  cube.h  fpscamera.cpp  freecamera.cpp  freecamera.h  gameobject.cpp  gameobject.h  level.cpp  level.h  plain.cpp  plain.h
src/render/: debugrenderer.cpp  debugrenderer.h  geom.cpp  geom.h
src/ui/: uiammo.cpp  uiammo.h  uiammo.ui  uideathmatch.cpp  uideathmatch.h  uideathmatch.ui  uihealthbar.cpp  uihealthbar.h  uihealthbar.ui  uisettings.cpp  uisettings.h  uisettings.ui  uistaminabar.cpp  uistaminabar.h  uistaminabar.ui
